--- a/html/dogfact.html
+++ b/html/dogfact.html
@@ -12,6 +12,8 @@
     </div>
     <br>
     <pre id="dogfact"> </pre>
+    
+    <img src="/img/bernese_fact.jpg" alt="Bernese puppy" align="center" />
     <script src="/script.js"></script>
   </body>
 </html>
