--- a/html/dogfact.html
+++ b/html/dogfact.html
@@ -13,7 +13,7 @@
     <br>
     <pre id="dogfact"> </pre>
     
-    <img src="/img/bernese_fact.jpg" alt="Bernese puppy" align="center" />
+    <img src="/img/bernese_fact.jpg" alt="Bernese puppy" width="30%" height="30%"/>
     <script src="/script.js"></script>
   </body>
 </html>
