--- a/hotelbookings/index.html
+++ b/hotelbookings/index.html
@@ -1,4 +1,52 @@
 <html>
-  <h1> hello there </h1>
+	<head>
+		<title> Hotel Bookings </title>
+    <style>*{user-select:none;}</style>
+	</head>
+	<body>
+		<div id="header" style="text-align:center;text-decoration:underline; font-size:150%">Welcome, guest!</div>
+		<br>
+		<div id="roomType" style="text-align:center">What type of room do you want?</div>
+		<br>
+    <div id="roomSelector" style="text-align:center; font-size:105%"><button id="rl"> &lt; </button><span id="room"> Normal </span><button id="rr"> &gt; </button></div>
+		<br>
+		<div id="roomCost" style="text-align:center">Expected cost per night: &pound;45</div>
+		<br>
+		<div id="daysStaying" style="text-align:center">How many days do you want to stay?</div>
+		<br>
+		<div style="text-align:center"><select><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option><option>11</option><option>12</option><option>13</option><option>14</option><option>15</option><option>16</option><option>17</option><option>18</option><option>19</option><option>20</option><option>21</option>
+		</select> Day(s)</div>
+		<br>
+		<div id="roomBenefits" style="text-align:center">Room Benefits</div>
+		<br>
+    <script>
+    rooms = ["Normal","Deluxe","Penthouse Suite"]
+    costs = [50,80,300]
 
+    room_selected=0;
+
+    document.getElementById("rl").onclick=function(){
+      if(room_selected==0){
+        return;
+      } else {
+        room_selected-=1;
+        upd()
+      }
+    }
+    document.getElementById("rr").onclick=function(){
+      if(room_selected==2){
+        return;
+      } else {
+        room_selected+=1;
+        upd()
+      }
+    }
+
+    function upd(){
+      document.getElementById("room").innerHTML=" "+rooms[room_selected]+" "
+      document.getElementById("roomCost").innerHTML="Expected cost per night: £"+costs[room_selected]
+    }
+    upd()
+    </script>
+	</body>
 </html>
