--- a/hotelbookings/index.html
+++ b/hotelbookings/index.html
@@ -19,7 +19,7 @@
 		<br>
 		<div id="roomBenefits" style="text-align:center">Room Benefits</div>
 		<br>
-		<div id="benifits">None</div>
+		<div id="benifits" style="text-align:center">None</div>
     <script>
 	    rooms = ["Normal","Deluxe","Penthouse Suite"]
 	    costs = [50,80,300]
