--- a/hotelbookings/index.html
+++ b/hotelbookings/index.html
@@ -60,7 +60,7 @@
 			document.getElementById("rr").style.display=""
 		}
 		    
-		document.getElementById("benifits").innerHTML=room_benifits(room_selected)
+		document.getElementById("benifits").innerHTML=room_benifits[room_selected]
 	    }   
 	    upd()
     </script>
