--- a/hotelbookings/index.html
+++ b/hotelbookings/index.html
@@ -8,7 +8,7 @@
 		<br>
 		<div id="roomType" style="text-align:center">What type of room do you want?</div>
 		<br>
-    <div id="roomSelector" style="text-align:center; font-size:105%"><button id="rl"> &lt; </button><span id="room"> Normal </span><button id="rr"> &gt; </button></div>
+    		<div id="roomSelector" style="text-align:center; font-size:105%"><button id="rl"> &lt; </button><span id="room"> Normal </span><button id="rr"> &gt; </button></div>
 		<br>
 		<div id="roomCost" style="text-align:center">Expected cost per night: &pound;45</div>
 		<br>
@@ -23,7 +23,7 @@
     <script>
 	    rooms = ["Normal","Deluxe","Penthouse Suite"]
 	    costs = [50,80,300]
-	    room_benifits = ["None","Free Park Tickets","Infinity Pool In Suite"]
+	    room_benifits = ["None","Free Park Tickets","Infinity Pool In Suite <br> Free Park Tickets"]
 
 	    room_selected=0;
 
