--- a/hotelbookings/index.html
+++ b/hotelbookings/index.html
@@ -22,6 +22,7 @@
 		<div id="benifits" style="text-align:center">None</div><br>
 		<div id="totalCost" style="text-align:center"> Total Cost: £50</div>
     <script>
+	    alert(days_staying.value)
 	    rooms = ["Normal","Deluxe","Penthouse Suite"]
 	    costs = [50,80,300]
 	    room_benifits = ["None","Free Park Tickets","Infinity Pool In Suite <br> Free Park Tickets"]
