--- a/hotelbookings/index.html
+++ b/hotelbookings/index.html
@@ -51,7 +51,7 @@
 	    function upd(){
 	      document.getElementById("room").innerHTML=" "+rooms[room_selected]+" "
 	      document.getElementById("roomCost").innerHTML="Expected cost per night: £"+costs[room_selected]
-	      document.getElementById("totalCost").innerHTML="Total cost: £"+(days_staying.value*costs[room_selected]
+	      document.getElementById("totalCost").innerHTML="Total cost: £"+days_staying.value*costs[room_selected]
 
 		if(room_selected==0){
 			document.getElementById("rl").style.display="none"
