--- a/hotelbookings/index.html
+++ b/hotelbookings/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title> Hotel Bookings </title>
-		<style>*{user-select:none;}body{background-image:linear-gradient(grey, white);}</style>
+		<style>*{user-select:none;}body{background-image:linear-gradient(white, gray);}</style>
 	</head>
 	<body>
 		<div id="header" style="text-align:center;text-decoration:underline; font-size:150%">Welcome, guest!</div>
