--- a/hotelbookings/index.html
+++ b/hotelbookings/index.html
@@ -4,7 +4,7 @@
 		<style>*{user-select:none;}body{background-image:linear-gradient(white, gray);}</style>
 	</head>
 	<body>
-		<div id="header" style="text-align:center;text-decoration:underline; font-size:150%">Welcome, guest!</div>
+		<marquee id="header" style="display:inline-block;text-align:center;text-decoration:underline; font-size:150%">Welcome, guest!</marquee>
 		<br>
 		<div id="roomType" style="text-align:center">What type of room do you want?</div>
 		<br>
